--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
       <img class="header__logo-image" src="./images/logo-black.svg" alt="logo">
     </div>
     <div class="header__address">
-      <a class="phone" href="tel:+99995555555">+9 999 555 5555</a> <br />
-      <a class="email" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+      <address class="address" href="tel:+99995555555">+9 999 555 5555</address>
+      <address class="address" href="mailto:info@sobaka.ge">info@sobaka.ge</address>
       <address class="address">наб. Принсенграхт 263-<br/> 265, Амстердам</address>
     </div>
     </div>
@@ -89,8 +89,36 @@
       </ul>
       <p class="lots__look-more-link">посмотреть больше</p>
     </section>
-    <section class="about"></section>
+    <section class="about">
+      
+      <div class="about__logo">
+        <img src="./images/logo-white.svg" alt="logo" class="about__logo-image">
+      </div>
+      <div class="about__column">
+        <h2 class="about__title">Об аукционе</h2>
+        <p class="about__text">Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями? <br /><br />Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря
+          на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми.</p>
+      </div>
+    </section>
   </main>
-  <footer class="footer"></footer>
+  <footer class="footer">
+    <div>
+    <address class="address" href="tel:+99995555555">+9 999 555 5555</address>
+      <address class="address" href="mailto:info@sobaka.ge">info@sobaka.ge</address>
+      <address class="address">наб. Принсенграхт 263-<br/> 265, Амстердам</address>
+    </div>
+    <nav class="footer__menu">
+      <ul class="footer__menu-list">
+        <li class="footer__menu-list-item"><a class="footer__menu-link footer__menu-link_active">главная</a></li>
+        <li class="footer__menu-list-item"><a class="footer__menu-link">посмотреть лоты</a></li>
+        <li class="footer__menu-list-item"><a class="footer__menu-link">об аукционе</a></li>
+      </ul>
+    </nav>
+    <div class="footer__social-list">
+      <a class="footer__social-link"><img src="./images/yt.svg" alt="youtube" class="footer__social-icon"></a>
+      <a class="footer__social-link"><img src="./images/vk.svg" alt="vk" class="footer__social-icon"></a>
+      <a class="footer__social-link"><img src="./images/pinterest.svg" alt="pinterest" class="footer__social-icon"></a>
+    </div>
+  </footer>
 </body>
 </html>
