--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Оно тебе надо</title>
-  <link rel="stylesheet" href="./fonts/fonts.css"></link>
+  <link rel="stylesheet"  href="./fonts/fonts.css"></link>
   <link rel="stylesheet" href="./styles/global.css"></link>
   <link rel="stylesheet" href="./styles/index.css"></link>
 </head>
@@ -29,29 +29,22 @@
   </header>
   <main>
     <section class="cover">
-      <div class="overlay">
+      <div class="overlay"></div>
         <h1 class="cover__title">
-          <span class="aligned-text">Он
-            <span class="letter-spacing-extended">о
-            </span>
-              <span class="no-letter-spacing">
-            </span>
-          
-            <span class="aligned-text aligned-text_center">теб
-              <span class="letter-spacing-extended">е
-              </span>
-                <span class="no-letter-spacing">
-                </span>
-              </span>
-            <span class="aligned-text aligned-text_right"><span class="letter-spacing-extended">н</span>адо<span class="no-letter-spacing"></span>
-              </span>
-              </span>
-            </span>
+          <span class="aligned-text"
+          >о<span class="letter-spacing-extended">но</span></span
+        >
+        <span class="aligned-text aligned-text_center"
+          >те<span class="letter-spacing-extended">бе</span></span
+        >
+        <span class="aligned-text aligned-text_right"
+          ><span class="letter-spacing-extended">н</span>ад<span class="no-letter-spacing">о</span></span
+        >
         </h1>
         <div class="cover__description">
-          <p class="cover__description-text">Аукцион&nbsp;&nbsp;вещей,&nbsp;&nbsp;в&nbsp;&nbsp;которые&nbsp;&nbsp;никто&nbsp;&nbsp;не&nbsp;&nbsp;верил</p>
+          <p class="cover__description-text">Аукцион вещей, в которые никто не верил</p>
           <button class="bet-button">Сделать ставку</button>
-        </div>
+        
 
 
       </div>
@@ -96,8 +89,9 @@
       </div>
       <div class="about__column">
         <h2 class="about__title">Об аукционе</h2>
-        <p class="about__text">Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями? <br /><br />Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря
-          на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми.</p>
+        <div class="about__text">
+          <p>Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть&nbsp; ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?</p>
+          <p>Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря&nbsp; на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми.</p>
       </div>
     </section>
   </main>
