--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Оно тебе надо</title>
-  <link rel="stylesheet"  href="./fonts/fonts.css"></link>
-  <link rel="stylesheet" href="./styles/global.css"></link>
-  <link rel="stylesheet" href="./styles/index.css"></link>
+  <link rel="stylesheet"  href="./fonts/fonts.css">
+  <link rel="stylesheet" href="./styles/global.css">
+  <link rel="stylesheet" href="./styles/index.css">
 </head>
 <body>
   <header class="header">
@@ -19,11 +19,10 @@
     <div class="header__logo">
       <img class="header__logo-image" src="./images/logo-black.svg" alt="logo">
     </div>
-    <div class="header__address">
-      <address class="address" href="tel:+99995555555">+9 999 555 5555</address>
-      <address class="address" href="mailto:info@sobaka.ge">info@sobaka.ge</address>
+    <div>
+      <address class="address"><a  href="tel:+99995555555">+9 999 555 5555</a></address>
+      <address class="address"><a  href="mailto:info@sobaka.ge">info@sobaka.ge</a></address>
       <address class="address">наб. Принсенграхт 263-<br/> 265, Амстердам</address>
-    </div>
     </div>
 
   </header>
@@ -93,12 +92,13 @@
           <p>Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть&nbsp; ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?</p>
           <p>Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря&nbsp; на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми.</p>
       </div>
+    </div>
     </section>
   </main>
   <footer class="footer">
     <div>
-    <address class="address" href="tel:+99995555555">+9 999 555 5555</address>
-      <address class="address" href="mailto:info@sobaka.ge">info@sobaka.ge</address>
+      <address class="address"><a href="tel:+99995555555">+9 999 555 5555</a></address>
+      <address class="address"><a href="mailto:info@sobaka.ge">info@sobaka.ge</a></address>
       <address class="address">наб. Принсенграхт 263-<br/> 265, Амстердам</address>
     </div>
     <nav class="footer__menu">
